--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,16 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
+                <data android:scheme="pdk4912183659106156114"></data>
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.PinterestByTagActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <data android:scheme="pdk4912183659106156114"></data>
             </intent-filter>
         </activity>
 
